# mace-mlx

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: HANDOFF_SC_SPARSE.md  OPTIMIZATION_REVIEW.md
docs/prototypes/: micro_sc_breakdown.py  profile_after.json  profile_cross_impl.json  profile_results.json  profile_sparse_sc_ab.json  proto_convtp_batch.py  proto_sparse_sc.py  proto_sparse_sc2.py  proto_sparse_sc3.py  proto_sparse_sc4.py  proto_sparse_sc5.py  proto_symcon.py  repro_compile_lazy_capture.py  sparse_sc_results.md  surf_check.py  surf_check_results.json  teamA_convtp_batch.md  teamB_4way_results.md  team_convtp_bench.py  team_convtp_report.md  team_convtp_vjp.py  team_fp16_common.py  team_fp16_fdforce.py  team_fp16_noisefloor.py  team_fp16_nve.py  team_fp16_nve_recheck.py  team_fp16_nvt.py  team_fp16_opt.py  team_fp16_opt_tight.py  team_fp16_report.md  team_fp16_results.json  (+14 more)
mace_mlx/: __init__.py  blocks.py  calculators.py  clebsch_gordan.py  converter.py  gate.py  irreps.py  kernels.py  linear.py  model.py  radial.py  spherical_harmonics.py  symmetric_contraction.py  tensor_product.py  utils.py
scripts/: benchmark.py  benchmark_all_models.py
tests/: conftest.py  test_benchmark.py  test_blocks.py  test_calculator.py  test_cg.py  test_complex_systems.py  test_forces.py  test_irreps.py  test_kernels.py  test_large_systems.py  test_linear.py  test_materials.py  test_md_stability.py  test_model.py  test_radial.py  test_realistic_systems.py  test_spherical_harmonics.py  test_stress.py  test_stress_extended.py  test_symmetric_contraction.py  test_tensor_product.py
